# Advent-of-Code-2021

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
aoc/: __init__.py  main.py
aoc/challenges/2021/day_1/: __init__.py
aoc/challenges/2021/day_2/: __init__.py
aoc/challenges/2021/day_3/: __init__.py
aoc/challenges/2021/day_4/: __init__.py
aoc/challenges/2021/day_6/: __init__.py
aoc/challenges/2021/day_7/: __init__.py
aoc/challenges/day_1/: __init__.py
aoc/challenges/day_10/: __init__.py
aoc/challenges/day_11/: __init__.py
aoc/challenges/day_2/: __init__.py
aoc/challenges/day_3/: __init__.py
aoc/challenges/day_4/: __init__.py
aoc/challenges/day_5/: __init__.py
aoc/challenges/day_6/: __init__.py
aoc/challenges/day_7/: __init__.py
aoc/challenges/day_8/: __init__.py
aoc/challenges/day_9/: __init__.py
aoc/challenges/helper/: abstract.py  wrapper.py
aoc/challenges/year_2023/: main.go
aoc/helper/: abstract.py  filereader.py  loader.py  wrapper.py
challenges/day_1/: __init__.py
challenges/day_2/: __init__.py
challenges/helper/: wrapper.py
test/: test_day_eight.py  test_day_eleven.py  test_day_five.py  test_day_four.py  test_day_nine.py  test_day_one.py  test_day_seven.py  test_day_six.py  test_day_ten.py  test_day_three.py  test_day_two.py
test/year_2021/: test_day_one.py  test_day_three.py  test_day_two.py
test/year_2022/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py
(+24 files in other folders)
