[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["Niklas Rittmann <niklas.rittmann@me.com>"]

[tool.black]
line-length = 80

[tool.isort]
known_third_party = ["numpy", "pandas", "pytest"]
skip = ["main.py"]

[tool.pytest.ini_options]
addopts = "--cov=aoc"
testpaths = [
    "test",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
